force-app/main/default/objects/Question__c/fields/AnswerType__c.field-meta.xml
<CustomField>
    <fullName>AnswerType__c</fullName>
    <description>Indicates whether the answer type will be a picklist, radio-button, free text or true/false value</description>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radio Button</fullName>
            </value>
            <value>
                <fullName>Free Text</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
                <isActive>false</isActive>
                <label>Picklist</label>
            </value>
            <value>
                <fullName>True/False</fullName>
                <isActive>false</isActive>
                <label>True/False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>