force-app/main/default/objects/Question__c/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether the question is mandatory or not</description>
    <label>This question is required</label>
    <type>Checkbox</type>
</CustomField>