force-app/main/default/objects/Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Indicates the question which will be displayed to the end user</description>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>