force-app/main/default/objects/Question__c/fields/QuestionOrder__c.field-meta.xml
<CustomField>
    <fullName>QuestionOrder__c</fullName>
    <description>Indicates the order in which each question should be displayed for the assessment</description>
    <label>Question Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>