force-app/main/default/objects/Question__c/fields/SDOH__c.field-meta.xml
<CustomField>
    <fullName>SDOH__c</fullName>
    <description>Used to store the SDOH category</description>
    <label>SDOH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SDOHCategory</valueSetName>
    </valueSet>
</CustomField>