force-app/main/default/objects/Question__c/recordTypes/RE_Assessment_Question.recordType-meta.xml
<RecordType>
    <fullName>RE_Assessment_Question</fullName>
    <active>true</active>
    <label>Resource Engine Assessment Question</label>
</RecordType>